# CSC-3380

./: .env.example  .gitignore  CMakeLists.txt  README.md  ReadMe.md  docker-compose.yaml  rtsp_viewer  rtsp_viewer.cpp  test.cpp
.devcontainer/: devcontainer.json  dockerfile
backend/: CMakeLists.txt  Dockerfile
backend/src/: Makefile  ReadMe.md  main.cpp
tgrizz/: auth.cpp
webserver/: index.html
